--- a/src/app/modules/headline/headline.component.scss
+++ b/src/app/modules/headline/headline.component.scss
@@ -1,3 +1,5 @@
+@import '../../app.component.scss';
+
 .container-headline {
     display: flex;
     justify-content: center;
@@ -11,6 +13,18 @@
 
     .name{
         font-size: 3rem;
+    }
+
+    @include mobile {
+        .name{
+            font-size: 2rem;
+        }
+    }
+
+    @include tablet {
+        .name{
+            font-size: 2rem;
+        }
     }
 
     h1{
