--- a/src/app/modules/payments/payments.component.scss
+++ b/src/app/modules/payments/payments.component.scss
@@ -1,3 +1,5 @@
+@import '../../app.component.scss';
+
 .container-payments{
     padding: 2rem 0 2rem 0;
     width: 100%;
@@ -37,21 +39,37 @@
             background-image: url('./assets/images/visa.png');
             width: 100px;
             height: 24px;
+            @include mobile {
+                width: 54px;
+                height: 10px;
+            }
         }
         .masterCard{
             background-image: url('./assets/images/masterCard.png');
             width: 70px;
             height: 36px;
+            @include mobile {
+                width: 40px;
+                height: 18px;
+            }
         }
         .paypal{
             background-image: url('./assets/images/paypal.png');
             width: 68px;
             height: 66px;
+            @include mobile {
+                width: 36px;
+                height: 34px;
+            }
         }
         .mercadoPago{
             background-image: url('./assets/images/mercadoPago.png');
             width: 130px;
             height: 26px;
+            @include mobile {
+                width: 80px;
+                height: 20px;
+            }
         }
         .payments-border{
             height: 100%;
