fix aspect mobile

--- a/src/app/modules/about-me/about-me.component.html
+++ b/src/app/modules/about-me/about-me.component.html
@@ -1,16 +1,12 @@
 <div class="container-aboutme">
-    <mat-grid-list cols="2" rowHeight="1:1">
-        <mat-grid-tile>
-            <div class="aboutme-text">
-                <h2 class="letter-title aboutme-title">{{this.aboutMeTitle}}</h2>
-                <div>{{this.aboutMe}}</div>
+    <div class="aboutme-grid">
+        <div class="aboutme-text">
+            <h2 class="letter-title aboutme-title">{{this.aboutMeTitle}}</h2>
+            <div>{{this.aboutMe}}</div>
+        </div>
+        <div class="aboutme-image-container">
+            <div class="aboutme-image">
             </div>
-        </mat-grid-tile>
-        <mat-grid-tile>
-            <div class="aboutme-image-container">
-                <div class="aboutme-image">
-                </div>
-            </div>
-        </mat-grid-tile>
-    </mat-grid-list>
+        </div>
+    </div>
 </div>
