--- a/src/app/modules/about-me/about-me.component.scss
+++ b/src/app/modules/about-me/about-me.component.scss
@@ -9,6 +9,25 @@
     background-repeat: no-repeat;
     padding: 70px;
 
+    @include mobile{
+      height: 74%;
+    }
+
+    .aboutme-grid{
+      display: flex;
+      flex-direction: row wrap;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      height: 100%;
+
+      @include mobile {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      }
+    }
+
     .aboutme-text {
       display: flex;
       flex-direction: column;
@@ -27,6 +46,10 @@
       h2{
         font-weight: 400;
       }
+
+      @include mobile {
+        font-size: 3rem;
+      }
     }
     
     .aboutme-text div:last-child {
@@ -35,6 +58,10 @@
       font-family: 'Open Sans', sans-serif; 
       max-width: 700px;
       color: #5c4d4d; 
+
+      @include mobile {
+        font-size: 12px;
+      }
     }
 
     .aboutme-image{
@@ -47,7 +74,7 @@
     }
 
     .aboutme-image-container{
-      width: 60%;
+      width: 32%;
       height: 70%;
       border-top-left-radius: 0.35em;
       border-top-right-radius: 0.35em;
@@ -55,6 +82,11 @@
       border-bottom-left-radius: 0.35em;
       overflow: hidden;
       position: relative;
-      margin: 10%;
+      margin: 6%;
+      @include mobile {
+        width: 76%;
+        height: 50%;
+        margin: 0;
+      }
     }
 }
