--- a/src/app/modules/appointment/appointment.component.scss
+++ b/src/app/modules/appointment/appointment.component.scss
@@ -19,6 +19,10 @@
       h2{
         font-weight: 400;
       }
+
+      @include mobile {
+        font-size: 3rem;
+      }
   }
   
   .calendly-container {
