--- a/src/app/modules/payments/payments.component.scss
+++ b/src/app/modules/payments/payments.component.scss
@@ -19,6 +19,10 @@
         text-align: center;
         display: flex;
         justify-content: center;
+
+        @include mobile {
+            font-size: 3rem;
+        }
     }
     
     .container-payments-img{
