Add scroll effect, deleted payment screen

--- a/src/app/modules/contacts/contacts.component.html
+++ b/src/app/modules/contacts/contacts.component.html
@@ -1,20 +1,45 @@
-<div class="contacts-container">
-    <div class="name letter-title">
-        <h2>Sigamos en contacto</h2>
+<div class="container-contacts">    
+    <div class="container-payments">
+        <div id='paymentsTitle' class="letter-title payments" data-aos="fade-up">{{this.paymentsTitle}}</div>
+    
+        <div class="container-payments-img" data-aos="fade-up">
+            <div class="payments-img visa"></div>
+            <i class="payments-border"></i>
+            <div class="payments-img masterCard"></div>
+            <i class="payments-border"></i>
+            <div class="payments-img paypal"></div>
+            <i class="payments-border"></i>
+            <div class="payments-img mercadoPago"></div>
+        </div>
     </div>
-    <div class="contact-icons">
-        <div>
-            <a href="https://wa.me/5492644182875?text=Hola,%20quiero%20hacerte%20una%20consulta..." target="_blank">
-                <i class="fa-brands fa-whatsapp"></i>
-            </a>            
+    <div class="contacts-container-img">
+        <div class="contacts-container">
+            <div class="name letter-title" data-aos="fade-up">
+                <h2>Sigamos en contacto</h2>
+            </div>
+            <div class="contact-icons" data-aos="fade-up">
+                <div>
+                    <a href="https://wa.me/5492644182875?text=Hola,%20quiero%20hacerte%20una%20consulta..." target="_blank">
+                        <i class="fa-brands fa-whatsapp"></i>
+                    </a>            
+                </div>
+                <div>
+                    <a href="mailto:milagrosbecerra96@gmail.com?subject=Consulta&body=Hola,%20quiero%20hacerte%20una%20consulta...">
+                        <i class="fa-solid fa-envelope"></i>
+                    </a>            
+                </div>
+            </div>
         </div>
-        <!--<div>
-            <i class="fa-brands fa-instagram"></i>
-        </div>-->
-        <div>
-            <a href="mailto:milagrosbecerra96@gmail.com?subject=Consulta&body=Hola,%20quiero%20hacerte%20una%20consulta...">
-                <i class="fa-solid fa-envelope"></i>
-            </a>            
-        </div>
+        <footer class="footer-contact">
+            <div class="footer-contact-text">
+                <p class="p-footer">All Rights Reserved &#64; 2025</p>
+                <div class="footer-contact-text-img">
+                    <p class="p-footer">Developed by</p>
+                    <div class="flor-img">
+                        <a href="https://wa.me/5493416839792?text=Hola,%20quiero%20hacerte%20una%20consulta..."></a>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </div>
 </div>
