--- a/src/app/modules/about-me/about-me.component.html
+++ b/src/app/modules/about-me/about-me.component.html
@@ -1,10 +1,10 @@
 <div class="container-aboutme">
     <div class="aboutme-grid">
-        <div class="aboutme-text">
+        <div class="aboutme-text" data-aos="fade-up" data-aos-duration="1000">
             <h2 class="letter-title aboutme-title">{{this.aboutMeTitle}}</h2>
             <div>{{this.aboutMe}}</div>
         </div>
-        <div class="aboutme-image-container">
+        <div class="aboutme-image-container" data-aos="fade-up" data-aos-duration="1000">
             <div class="aboutme-image">
             </div>
         </div>
