--- a/src/app/modules/contacts/contacts.component.scss
+++ b/src/app/modules/contacts/contacts.component.scss
@@ -1,53 +1,196 @@
 @import '../../app.component.scss';
-
-.contacts-container{
-    padding: 2rem 0 2rem 0;
+.container-contacts{
     width: 100%;
     display: flex;
     justify-content: center;
     flex-flow: column;
     align-items: center;
-    height: 80vh;
+    height: 70vh;
+    margin-bottom: 16px;
     background-image: url('../../../assets/images/contacts-background.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 
-    .name{
-        font-size:3rem;
-        text-align: center;
+    .contacts-container-img{
+        height: 40vh;
+    
+        .contacts-container{
+            padding: 0 0 5rem 0;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            flex-flow: column;
+            align-items: center;
+    
+            .name{
+                font-size:3rem;
+                text-align: center;
+                
+                h2{
+                    margin-bottom: 0.8rem;
+                    font-weight: 400; 
+                }
+    
+                @include mobile {
+                    font-size: 2.5rem;
+                }
+            }
+    
+            .contact-icons{
+                display: flex;
+                justify-content: center;
+                flex-flow: row wrap;
+    
+                div{
+    
+                    background-color: #e9bccf;
+                    border-radius: 30px;
+                    padding: 0.6rem;
+                    margin: 0 0.2rem 0 0.2rem;
+                    cursor: pointer;
+                    transition: all 0.3s ease-in-out;
+                    &:hover{
+                        background-color: #d8a2b7;
+                        transform: scale(1.1);
+                    }
+    
+                    i{
+                        color: #ffffff;
+                        font-size: 2rem;
+                    }
+
+                    @include mobile {
+                        background-color: #e9bccf;
+                        border-radius: 30px;
+                        padding: 0.4rem;
+                        margin: 0 0.2rem 0 0.2rem;
+                        &:hover{
+                            transform: none;
+                        }
         
-        h2{
-            margin-bottom: 0.8rem;
-            font-weight: 400; 
+                        i{
+                            color: #ffffff;
+                            font-size: 2rem;
+                        }
+
+                    }
+                }
+            }
+    
         }
-
-        @include mobile {
-            font-size: 2.5rem;
-        }
-    }
-
-    .contact-icons{
-        display: flex;
-        justify-content: center;
-        flex-flow: row wrap;
-
-        div{
-
-            background-color: #e9bccf;
-            border-radius: 30px;
-            padding: 0.6rem;
-            margin: 0 0.2rem 0 0.2rem;
-            cursor: pointer;
-            transition: all 0.3s ease-in-out;
-            &:hover{
-                background-color: #d8a2b7;
-                transform: scale(1.1);
+    
+        .footer-contact-text{
+            display: flex;
+            justify-content: center;
+            flex-flow: column;
+            align-items: center;
+            font-size: 13px;
+            margin-bottom: 40px;
+    
+            .p-footer{
+                color: #5c4d4d; 
+            }
+    
+            @include mobile {
+                font-size: 0.6rem;
             }
 
-            i{
-                color: #ffffff;
-                font-size: 2rem;
+            .footer-contact-text-img{
+                display: flex;
+                justify-content: center;
+                flex-flow: row wrap;
+                width: 100%;
+                align-items: center;
+                
+                .flor-img{
+                    background-image: url('./assets/images/flor.png');
+                    width: 20px;
+                    height: 20px;
+                    background-size: cover;
+                    background-position: center;
+                    background-repeat: no-repeat;
+                }
+            }
+        }
+    }
+    
+
+    
+    .container-payments{
+        padding: 1rem 0 0 0;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        flex-flow: column;
+        align-items: center;
+        height: 70vh;
+        
+        .payments{
+            font-size: 4rem;
+            text-align: center;
+            display: flex;
+            justify-content: center;
+    
+            @include mobile {
+                font-size: 3rem;
+            }
+        }
+        
+        .container-payments-img{
+            display: flex;
+            justify-content: center;
+            flex-flow: row wrap;
+            width: 100%;
+            align-items: center;
+            
+            .payments-img{
+                background-size: cover;
+                background-position: center;
+                background-repeat: no-repeat;
+                padding: 0.3rem;
+                margin: 0 0.8rem 0 0.8rem;
+            }
+            .visa{
+                background-image: url('./assets/images/visa.png');
+                width: 100px;
+                height: 24px;
+                @include mobile {
+                    width: 54px;
+                    height: 10px;
+                }
+            }
+            .masterCard{
+                background-image: url('./assets/images/masterCard.png');
+                width: 70px;
+                height: 36px;
+                @include mobile {
+                    width: 36px;
+                    height: 18px;
+                }
+            }
+            .paypal{
+                background-image: url('./assets/images/paypal.png');
+                width: 68px;
+                height: 66px;
+                @include mobile {
+                    width: 36px;
+                    height: 34px;
+                }
+            }
+            .mercadoPago{
+                background-image: url('./assets/images/mercadoPago.png');
+                width: 130px;
+                height: 26px;
+                @include mobile {
+                    width: 80px;
+                    height: 20px;
+                }
+            }
+            .payments-border{
+                height: 100%;
+                width: 2px;
+                border-right: 2px dotted #644f44;
             }
         }
     }
